--- a/style.css
+++ b/style.css
@@ -1,82 +1,18 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-body{
-    background: #ccc;
-    box-sizing: border-box;
-    overflow-y: scroll;
-}
-nav{
-    width: 100%;
-    height: 50px;
-    background: black;
-    color: white;
-    position: fixed;
-}
-ul{
-    float: right;
-}
-ul li{
-    display: inline-block;
-    background: white;
-    padding: 10px;
-    line-height: 29px;
-    color:black;
-}
-ul li a{
-    padding: 10px;
-    text-decoration: none;
-    color: black;
-}
-label{
-    background: #fff;
-    width: 20px;
-    height: 20px;
-    position: fixed;
-    margin-left: 20px;
-    margin-top: 20px;
-}
-#check{
-    display: none;
-}
+
+
+
+
+
+
+
 #main{
-    background: white;
     width: 1148px;
-    box-shadow: 10px 8px 10px black;
-    height: fit-content;
-    padding: 10px;
-    overflow:hidden;
-    margin: auto;
-    align-items: center;
+    height: 300px;
+    position: fixed;
+    overflow: scroll;
 }
 .products{
     width: 280px;
-    height: 320px;
+    height: 300px;
     border: 1px solid black;
-    float: left;
-    margin: auto;
-    align-self: center;
-}
-@media (max-width:700px) {
-    .products{
-        width: 100%;
-        height: 320px;
-    }
-    #main{
-        width: 100%;
-    }
-}
-.products button{
-    width: 100%;
-    height: 32px;
-    background: green;
-}
-.products h4{
-    border: 1px solid black;
-    height: 32px;
-}
-.products img{
-    width: 100%;
-    height: 253px;
 }
