--- a/style.css
+++ b/style.css
@@ -1,18 +1,87 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 
 
 
+body{
+    background: #ccc;
+    margin: 0;
+    padding: 0;
+}
 
-
-
-
+nav{
+    width: 100%;
+    height: 50px;
+    position: fixed;
+    background: black;
+    margin-top: -50px;
+}
+label{
+    width: 25px;
+    height: 25px;
+    margin-left: 13px;
+    margin-top: 13px;
+    position: fixed;
+    background: white;
+    cursor: pointer;
+}
+nav ul{
+    float: right;
+    margin-right: 10px;
+}
+nav ul li{
+    display: inline-block;
+    padding: 10px;
+    text-transform: capitalize;
+    background: white;
+    margin-top: 5px;
+}
+#sidebar{
+    width: 250px;
+    height: 100vh;
+    background: black;
+    position: fixed;
+    text-align: center;
+    align-items: center;
+}
+#sidebar li{
+    color:none;
+    padding: 10px;
+    border: 1px solid white;
+    width: 200px;
+    margin-top: 10px;
+    margin-left: 15px;
+    border-radius: 20px;
+}
+#sidebar li a{
+    text-decoration: none;
+    color: white;
+}
 #main{
     width: 1148px;
-    height: 300px;
-    position: fixed;
-    overflow: scroll;
+    height: 100vh;
+    overflow-y: scroll;
+    margin-left: 25px;
+    background: rgb(255, 255, 255);
+    margin-top: 50px;
 }
 .products{
-    width: 280px;
+    width: 270px;
     height: 300px;
     border: 1px solid black;
+    float: left;
+    margin: 5px;
+}
+.products h4{
+    width: 100%;
+    height: 45px;
+    border-bottom: 1px solid black;
+    margin-top: 0;
+}
+.products button{
+    width: 100%;
+    background: none;
+    height: 40px;
 }
