--- a/style.css
+++ b/style.css
@@ -24,8 +24,23 @@ label{
     margin-left: 13px;
     margin-top: 13px;
     position: fixed;
-    background: white;
+    background: none;
     cursor: pointer;
+}
+#label_1{
+    width: 25px;
+    height: 25px;
+    margin-left: 13px;
+    margin-top: 13px;
+    position: fixed;
+    background: none;
+    cursor: pointer;
+}
+.sp1,.sp2,.sp3{
+    background: white;
+    height: 3px;
+    width: 100%;
+    margin-top: 3px;
 }
 nav ul{
     float: right;
@@ -38,13 +53,21 @@ nav ul li{
     background: white;
     margin-top: 5px;
 }
+nav ul li a{
+    color: black;
+    text-decoration: none;
+}
 #sidebar{
-    width: 250px;
+    width: fit-content;
     height: 100vh;
     background: black;
     position: fixed;
     text-align: center;
     align-items: center;
+    display: none;
+    transition: transform 300ms ease-in-out;
+    overflow: scroll;
+    padding: 10px;
 }
 #sidebar li{
     color:none;
@@ -52,7 +75,6 @@ nav ul li{
     border: 1px solid white;
     width: 200px;
     margin-top: 10px;
-    margin-left: 15px;
     border-radius: 20px;
 }
 #sidebar li a{
@@ -84,4 +106,38 @@ nav ul li{
     width: 100%;
     background: none;
     height: 40px;
+    border-bottom: 1px solid black;
+    border-top: 1px solid black;
+    border-left: 1px solid white;
+    border-right: 1px solid white;
+    cursor: pointer;
+}
+#hover_menu{
+    display: none;
+    background: white;
+    padding: 10px;
+    margin-top: 10px;
+}
+#hover_menu li{
+    width: 90%;
+    background: black;
+    margin-left: -0px;
+    border-radius: 0px;
+}
+#hover_icon:hover{
+    #hover_menu{
+        display: block;
+    }
+}
+#hover_id_menu{
+
+    background: black;
+    position: fixed;
+    display: none;
+    border: 2px solid black;
+}
+#hover_id_icon:hover{
+    #hover_id_menu{
+        display: block;
+    }
 }
