--- a/style.css
+++ b/style.css
@@ -141,3 +141,13 @@ nav ul li a{
         display: block;
     }
 }
+
+
+#form{
+    width: 380px;
+    height: fit-content;
+    background: white;
+    margin: auto;
+    justify-content: center;
+    margin-top: 100px;
+}
