--- a/style.css
+++ b/style.css
@@ -150,4 +150,38 @@ nav ul li a{
     margin: auto;
     justify-content: center;
     margin-top: 100px;
+    padding: 20px;
+    box-shadow: 5px 5px 5px black;
+    border-radius: 15px;
+}
+#form input{
+    width: 100%;
+    height: 40px;
+    margin-top: 10px;
+    padding-left: 10px;
+}
+#form button{
+    width: 100%;
+    background: none;
+    border: 1px solid black;
+    height: 40px;
+    margin-top: 50px;
+    cursor: pointer;
+    color: green;
+    font-size: 15px;
+}
+#massage{
+    margin: auto;
+    text-align: center;
+    background: rgba(1, 255, 1, 0.644);
+    padding: 10px;
+    display: none;
+}
+#form label{
+    text-align: center;
+    color: green;
+    margin: auto;
+    font-style: italic;
+    font-family: initial;
+    font-size: 25px;
 }
